# core2026

./: .clang-format  .gitignore  404.html  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  package.xml  requirements-docs.txt
core_behavior_system/: CMakeLists.txt  package.xml
core_behavior_system/config/: behavior_system.yaml
core_behavior_system/include/core_behavior_system/: waypoint_selector.hpp
core_behavior_system/launch/: behavior_system.launch.py
core_behavior_system/src/: behavior_system.cpp  behavior_system_manager.cpp  waypoint_selector.cpp
core_costmap_builder/: .gitignore  CMakeLists.txt  README.md  package.xml
core_costmap_builder/config/: costmap_build_node.yaml  static_global_map.yaml
core_costmap_builder/include/core_costmap_builder/: costmap_build_node.hpp  static_global_map_publisher.hpp
core_costmap_builder/launch/: costmap_build.launch.py
core_costmap_builder/src/: costmap_build_node.cpp  static_global_map_publisher.cpp
core_enemy_detection/: CMakeLists.txt  package.xml
core_enemy_detection/config/: Calibration-HD.xml  camera_parameter.yaml  other.xml  sim_param.yaml
core_enemy_detection/include/: target_detector_parameter.yaml
core_enemy_detection/include/core_enemy_detection/: core_enemy_detection_common.hpp  target_detector.hpp  target_selector.hpp
core_enemy_detection/launch/: detection..launch.py  detection.launch.py  enemy_detection.launch.py  usb_cam.launch.py
core_enemy_detection/src/: image2camera_vector_angle.hpp  target_calculator.cpp  target_calculator.hpp  target_calculator_main.cpp  target_detector.cpp  target_detector.hpp  target_detector_main.cpp  target_selector.cpp  target_selector.hpp  target_selector_main.cpp
core_gz/: CMakeLists.txt  package.xml
core_gz/launch/: gz.launch.py
core_gz/urdf/: core2025_attacker.urdf
core_gz/urdf/mesh/: Attacker_UpperWing.dae
core_gz/worlds/: CoRE2025_Field.dae  field_2025.sdf
core_gz_omnidrive_plugin/: CMakeLists.txt  package.xml
core_gz_omnidrive_plugin/src/: OmniDrive.cc  OmniDrive.hh
core_hardware/: CMakeLists.txt  README.md  install_soem.sh  package.xml
core_hardware/include/core_hardware/: Packet.h  core_hardware.hpp  ecat.hpp  hardware_snapshot.hpp  ipc_protocol.hpp
core_hardware/launch/: core_hardware.launch.py
core_hardware/scripts/: install_core_hardware_daemon_service.sh  remove_core_hardware_daemon_service.sh
core_hardware/src/: cc.h  core_hardware.cpp  core_hardware_daemon.cpp  core_hardware_usb.cpp  ecat.cpp  esc_coe.h
core_hardware/systemd/: core_hardware_daemon.service
core_hardware/teensy41/soes_test_ax58100/: platformio.ini
core_hardware/teensy41/teesny_u2d2/: platformio.ini
core_hardware/teensy41/upper/: platformio.ini
core_hardware/test/: CMakeLists.txt  build.sh  download_soem.sh  main.cpp
core_launch/: CMakeLists.txt  package.xml
core_launch/config/: integration_test.rviz  navigation.rviz
core_launch/launch/: imu_filter.launch.py  navigation.launch.py  state_publisher.launch.py
core_launch/scripts/: map_server_node.py  navigation.sh  odom_bridge_node.py  start_navigation_fastlio.sh
core_launch/urdf/: core2025_attacker.urdf
core_localization/: CMakeLists.txt  package.xml
core_localization/config/: localization_params.yaml
core_localization/launch/: localization.launch.py
core_localization/src/: localization_node.cpp
core_mode/: CMakeLists.txt  package.xml
core_mode/config/: mode.params.yaml
core_mode/launch/: mode.launch.py
core_mode/src/: diagnostic.cpp  emergency_handler.cpp
core_mppi/: CMakeLists.txt  README.md  package.xml
core_mppi/launch/: mppi.launch.py
core_mppi/param/: default_params.yaml
core_mppi/src/: mppi_controller.cpp  mppi_node.cpp  node.cpp
core_path_follower/: CMakeLists.txt  README.md  package.xml
core_path_follower/config/: default_params.yaml
core_path_follower/launch/: path_follower.launch.py  test_path_follower.launch.py
core_path_follower/schema/: core_path_follower.schema.json
core_path_follower/src/: controller.cpp  interpolation.cpp  node.cpp  path_follower_node.cpp
core_path_follower/test/: test_path_publisher.py
core_path_planner/: CMakeLists.txt  README.md  package.xml
core_path_planner/launch/: path_planner.launch.py
core_path_planner/src/: costmap_publisher_main.cpp  costmap_publisher_node.cpp  node.cpp  path_planner.cpp  path_planner_node.cpp
core_ros_player_contoller/: CMakeLists.txt  package.xml
core_ros_player_contoller/launch/: wireless_parser_node.launch.py
core_ros_player_contoller/src/: main.cpp
core_ros_player_controller/: CMakeLists.txt  README.md  package.xml
core_ros_player_controller/config/: wireless_parser_params.yaml
core_ros_player_controller/launch/: wireless_parser_node.launch.py
core_ros_player_controller/src/: main.cpp
core_ros_player_controller/test/: test_wireless_parser_launch.py
core_test/: CMakeLists.txt  README.md  package.xml
core_test/cmake/: CoreTest.cmake
core_test/test/: test_core_smoke.cpp
enemy_detection/: CMakeLists.txt  package.xml
enemy_detection/config/: perpectiveCalibrate.xml
enemy_detection/launch/: enemy_detection.launch.py
enemy_detection/src/: enemy_detection.cpp  enemy_detection.hpp  enemy_detection_main.cpp  enemy_selector.cpp  enemy_selector.hpp  enemy_selector_main.cpp  image2camera_vector_angle.cpp
gui_qt/: CMakeLists.txt  package.xml
gui_qt/config/: global_battle.param.yaml  gui_qt.param.yaml
gui_qt/launch/: camera.launch.xml  hud.launch.xml  hud_debug.launch.xml
gui_qt/src/: CommonDefinition.hpp  HUDAmmoPanel.cpp  HUDAmmoPanel.hpp  HUDCamera.cpp  HUDCamera.hpp  HUDCompass.cpp  HUDCompass.hpp  HUDCore.hpp  HUDHPPanel.cpp  HUDHPPanel.hpp  HUDHazard.cpp  HUDHazard.hpp  HUDLargeMsg.cpp  HUDLargeMsg.hpp  HUDManager.cpp  HUDManager.hpp  HUDNode.cpp  HUDNode.hpp  HUDQuadrantElevation.cpp  HUDQuadrantElevation.hpp  HUDReticle.cpp  HUDReticle.hpp  HUDSpeed.cpp  HUDSpeed.hpp  HardwareUIConverterNode.cpp  MainWindow.cpp  MainWindow.hpp  SettingMenu.cpp  SettingMenu.hpp  ToggleSwitch.cpp  ToggleSwitch.hpp  aaa.drawio  main.cpp
(+161 files in other folders)
