<?xml version="1.0"?>
<package format="3">
  <name>core_costmap_builder</name>
  <version>0.0.0</version>
  <description>ROS 2 package that builds and maintains costmaps from sensor data for robot navigation.</description>
  <maintainer email="4869naokichi@gmail.com">naokichi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>core_msgs</depend>
  <depend>backward_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
