<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pizac.twitter@gmail.com">pizac</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>soem</depend>
  <depend>core_msgs</depend>
  <depend>unzip</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
