<?xml version="1.0"?>
<package format="3">
  <name>core_mppi</name>
  <version>0.1.0</version>
  <description>Local MPPI controller node for cmd_vel generation with path and costmaps.</description>
  <maintainer email="dev@example.com">team-continue</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
