<?xml version="1.0"?>
<package format="3">
    <name>core_path_follower</name>
    <version>0.1.0</version>
    <description>Path follower node that follows nav_msgs/Path using a PID-based heading controller.</description>
    <maintainer email="dev@example.com">team-continue</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
    </export>
</package>